--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.reorz</groupId>
+    <groupId>com.reorz.yapa</groupId>
     <artifactId>yapa</artifactId>
     <version>1.0.0</version>
     <description>Yet Another Persistence framework made by Acris</description>
